# WorstImageFormat

./: .gitignore  Advanced-Encoding.txt  CLI-Tools.txt  C_PLUS_PLUS.md  README.md  common.py  convert.py  debug_gpu.py  gui_convert.py  main.py  output.bif  procedural.bif  procedural.wif  pyproject.toml  raw.txt  setup.py  test_depth.py  test_depth_alpha.wimf  view.py  wimf_test_suite.py
.github/workflows/: ci.yml  wheels.yml
ported/: codec.cpp  codec.hpp  core.cpp  core.hpp
src/: main.cpp
tests/: test_all.py
wimf/: __init__.py  animation.py  api.py  cat.py  cli.py  codec.py  core.py  gui.py  hwaccel.py  io.py  meta_tool.py  parity.py  test_core.py  viewer.py
wimf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
